# Trying-QT

QT-consol_app-hello/: CMakeLists.txt  main.cpp
QT_crash_cours/: mainwindow.cpp  mainwindow.h  mainwindow.ui
listing_app/: mainwindow.cpp  mainwindow.h  mainwindow.ui
